--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -5,7 +5,7 @@ on:
         - cron: '0 3,15 * * *'
 jobs:
     Main:
-        runs-on: ubuntu-20.04
+        runs-on: ubuntu-latest
         steps:
             -   run: |
                     echo "$SECSH" > ./secsh.sh
